--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
